// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop renders RTL styling 1`] = `
<div
  className="l-backdrop is-rtl "
  data-garden-id="modals.backdrop"
  data-garden-version="version"
/>
`;

exports[`Backdrop renders animation styling if provided 1`] = `
<div
  className="l-backdrop is-visible "
  data-garden-id="modals.backdrop"
  data-garden-version="version"
/>
`;

exports[`Backdrop renders center styling if provided 1`] = `
<div
  className="l-backdrop l-backdrop--center "
  data-garden-id="modals.backdrop"
  data-garden-version="version"
/>
`;

exports[`Backdrop renders default styling 1`] = `
<div
  className="l-backdrop "
  data-garden-id="modals.backdrop"
  data-garden-version="version"
/>
`;
